# django-onlineshop-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  trash
Develop/: package.json  pnpm-lock.yaml  tailwind.config.js
Develop/public/: 404.html  about.html  blog-detail.html  blog.html  checkout-cart.html  checkout-payment.html  checkout-shipping.html  compare.html  components.html  contact.html  faq.html  forgot-otp.html  forgot-reset.html  forgot.html  how-to-buy.html  index.html  login-otp.html  login-password.html  maintenance.html  payment-failed.html  payment-success.html  product-detail-no-quantity.html  product-detail.html  (+22 more)
account/: admin.py  api_urls.py  backends.py  logging.py  manager.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
config/: __init__.py  celery.py  celery_settings.py  settings.py  urls.py
core/: managers.py  models.py  tasks.py  utils.py
order/: api_urls.py  api_views.py  cart.py  context_processor.py  forms.py  models.py  order.py  serializers.py  tasks.py  urls.py  views.py
product/: models.py  tests.py  urls.py  views.py
templates/: add_address.html  cartitems.html  category_products.html  category_tree.html  change_password.html  change_profile.html  choose_address.html  home.html  login_choice.html  login_with_email.html  login_with_username_and_password.html  order.html  order_checkout.html  product_detail.html  profile.html  profile_orders.html  signup.html  user_orders_detail.html  users_addresses.html  verify_email.html  verify_email_for_changing_password.html
(+37 files in other folders)
