[tool.poetry]
name = "django-shop-final-project"
version = "0.1.0"
description = ""
authors = ["alibaghani <baghaniali2006@gmail.com>"]
readme = "README.md"
packages = [{include = "django_shop_final_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
redis = "^5.0.4"
pillow = "^10.3.0"
djangorestframework = "^3.15.1"
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.1"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
